--- a/style.css
+++ b/style.css
@@ -5,13 +5,14 @@
 }
 
 body {
-    min-width: 699px;
+    min-width: 980px;
     display: flex;
     background: #f5f5f5;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px; 
     color: #4d4d4d;
 }
+
 
 /*main*/
 .main {
@@ -55,6 +56,10 @@ form {
     padding: 10px 20px;
 }
 
+.all-complited {
+    color: #b8b8b8;
+}
+
 .todo-list {
     width: 100%;
     list-style: none;
@@ -85,22 +90,25 @@ form {
     border-radius: 50%;
     width: 30px;
     height: 30px;
-    margin: 16px 3px 16px 16px;
+    margin: 0 3px 0 16px;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .todo-text {
+    word-wrap: break-word;
     margin-left: 47px;
-    padding: 16px 0 16px 16px;
+    padding: 16px 10px 16px 16px;
     width: 500px;
     font-size: 24px;
 }
 
 .todo-list li .trashed-button {
 	display: none;
-    width: 40px;
-	height: 40px;
+    width: 30px;
+	height: 30px;
 	position: absolute;
-	top: 15px;
+    bottom: 15px;
 	right: 10px;
 	font-size: 30px;
 	color: #cc9a9a;
@@ -134,11 +142,31 @@ form {
     height: 40px;
     background: #ffffff;
     border: 1px solid #e4e4e4;
-    box-shadow: 0px 4px 5px rgb(0 0 0 / 10%);
+    box-shadow: 0px 0px 5px rgb(0 0 0 / 10%);
     padding: 0 15px;
     display: flex;
     list-style: none;
     position: relative;
+}
+
+.todo-menu-after-1 {
+    width: 98%;
+    height: 5px;
+    margin: 0 auto;
+    background: #ffffff;
+    border: 1px solid #e4e4e4;
+    border-top: none;
+    box-shadow: 0px 4px 5px rgb(0 0 0 / 10%);
+}
+
+.todo-menu-after-2 {
+    width: 96%;
+    height: 5px;
+    margin: 0 auto;
+    background: #ffffff;
+    border: 1px solid #e4e4e4;
+    border-top: none;
+    box-shadow: 0px 4px 5px rgb(0 0 0 / 10%);
 }
 
 .todo-menu-list {
@@ -302,10 +330,4 @@ form {
 
 .aside-text {
     font-style: italic;
-}
-
-@media (max-width: 899px) {
-    .aside {
-        display: none;
-    }
 }
